--- a/clone0405/package.json
+++ b/clone0405/package.json
@@ -16,6 +16,8 @@
     "moment": "^2.29.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-infinite-scroll-component": "^6.0.0",
+    "react-loading": "^2.0.3",
     "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
